# core

./: .gitignore  CMakeLists.txt  README.md  core.code-workspace  run.sh
core/: CMakeLists.txt
core/compute/: CMakeLists.txt  common.h  compute.h  device.cpp  device.h  event.cpp  event.h  helpers.cpp  helpers.h  interop.cpp  interop.h  kernel.cpp  kernel.h  math.h  memory.cpp  memory.h  ndrange.cpp  ndrange.h  program.cpp  program.h  sampler.cpp  sampler.h
core/graphics/: CMakeLists.txt  attribute.cpp  attribute.h  buffer.cpp  buffer.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  graphics.cpp  graphics.h  helpers.cpp  helpers.h  image.cpp  image.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  program.cpp  program.h  render.cpp  render.h  renderbuffer.cpp  renderbuffer.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertexarray.cpp  vertexarray.h
core/graphics/gl/: buffer.cpp  buffer.h  error.cpp  error.h  framebuffer.cpp  framebuffer.h  renderbuffer.cpp  renderbuffer.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
core/graphics/glsl/: attribute.cpp  attribute.h  datatype.cpp  datatype.h  program.cpp  program.h  shader.cpp  shader.h  uniform.cpp  uniform.h
core/math/: CMakeLists.txt  algebra.h  arithmetic.h  io.h  math.cpp  math.h  matrix.h  memory.h  ortho.h  random.h  transform.h  vector.h
core/math/simd/: algebra.h  arithmetic.h  common.h  matrix.h  transform.h  vector.h
empty/: CMakeLists.txt  README.md  run.sh
empty/code/: CMakeLists.txt  main.cpp
minicore/: CMakeLists.txt
minicore/base/: CMakeLists.txt  base.h  error.h  memory.h  parallel.cpp  parallel.h
minicore/compute/: compute.h  device.cpp  device.h  event.cpp  event.h  helpers.cpp  helpers.h  interop.cpp  interop.h  kernel.cpp  kernel.h  math.h  memory.cpp  memory.h  ndrange.cpp  ndrange.h  program.cpp  program.h  sampler.cpp  sampler.h
minicore/graphics/: CMakeLists.txt  attribute.cpp  attribute.h  buffer.cpp  buffer.h  camera.cpp  camera.h  common.h  framebuffer.cpp  framebuffer.h  graphics.cpp  graphics.h  helpers.cpp  helpers.h  image.cpp  image.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  program.cpp  program.h  renderbuffer.cpp  renderbuffer.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertexarray.cpp  vertexarray.h
minicore/math/: io.h  (+10 more)
samples/: CMakeLists.txt
samples/base/test/: CMakeLists.txt  test-memory.cpp  test-memory.h  test-parallel.cpp  test-parallel.h
samples/compute/02-hashmap/: CMakeLists.txt  common.h  hashmap.cpp  hashmap.h  main.cpp  modelcpu.cpp  modelcpu.h  modelgpu.cpp  modelgpu.h
samples/compute/02-hashmap/data/: hashmap.cl
samples/compute/03-array-reduce-single/: CMakeLists.txt  model.cpp
samples/compute/03-array-reduce-single/data/: pi.cl
samples/compute/06-pi-integral-binary/: CMakeLists.txt  common.h  model.cpp
samples/compute/06-pi-integral-binary/data/: pi.cl
samples/graphics/: CMakeLists.txt
samples/graphics/00-image/: CMakeLists.txt  main.cpp
samples/graphics/01-glfw/: CMakeLists.txt  main.cpp
samples/graphics/02-triangle/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h
samples/graphics/02-triangle/data/: triangle.frag  triangle.vert
samples/graphics/03-triangle-instance/: CMakeLists.txt  main.cpp
samples/graphics/03-triangle-instance-a/: CMakeLists.txt  triangle.cpp  triangle.h
samples/graphics/03-triangle-instance-a/data/: triangle.frag
samples/graphics/03-triangle-instance/data/: triangle.vert
samples/graphics/04-triangle-instance/: CMakeLists.txt  main.cpp
samples/graphics/04-triangle-instance-b/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h
samples/graphics/04-triangle-instance/data/: triangle.frag  triangle.vert
samples/graphics/05-triangle-instance/: CMakeLists.txt  main.cpp
samples/graphics/05-triangle-instance-c/: CMakeLists.txt  triangle.cpp  triangle.h
samples/graphics/05-triangle-instance/data/: triangle.frag  triangle.vert
samples/graphics/06-quad/: CMakeLists.txt  main.cpp  quad.cpp  quad.h
samples/graphics/06-quad/data/: quad.vert
samples/graphics/07-quad-image/: CMakeLists.txt  main.cpp  quad.cpp  quad.h
samples/graphics/07-quad-image/data/: quad.frag  quad.vert
samples/graphics/08-sphere-image/: CMakeLists.txt  main.cpp  sphere.cpp  sphere.h
samples/graphics/08-sphere-image/data/: sphere.frag  sphere.vert
samples/graphics/09-mesh-model/: CMakeLists.txt  main.cpp  model.cpp  model.h
samples/graphics/09-mesh-model/data/: model.frag  model.vert
samples/graphics/10-panorama/: CMakeLists.txt  main.cpp  panorama.cpp  panorama.h
samples/graphics/10-panorama/data/: panorama.frag  panorama.vert
samples/graphics/11-framebuffer/: CMakeLists.txt  drawable.cpp  drawable.h  main.cpp
samples/graphics/11-framebuffer/data/: quad.frag  sphere.frag
samples/graphics/12-iobuffer/: CMakeLists.txt  iobuffer.cpp  iobuffer.h  main.cpp  map.cpp  map.h
samples/graphics/12-iobuffer/data/: map-end.frag  map-end.vert  map-run.frag  map-run.vert
samples/math/: CMakeLists.txt  common.h  main.cpp  test-algebra-matrix2.h  test-algebra-matrix3.h  test-algebra-matrix4.h  test-algebra.cpp  test-arithmetic.cpp  test-arithmetic2.h  test-matrix.cpp  test-matrix2.h  test-matrix4.h  test-memory.cpp  test-ortho.cpp  test-ortho.h  test-random.cpp  test-vector.cpp  test-vector3.h  test.sh  testmath.sh
samples/math/ent/: CMakeLists.txt
samples/math/ent/src/: ent.c
samples/math/plot/: plot_ent.bash  plot_ent.gnuplot  plot_ent.sh
samples/math/test/: CMakeLists.txt  test-algebra-matrix2.h  test-algebra-matrix3.h  test-algebra-vector4.h  test-algebra.cpp  test-arithmetic2.h  test-arithmetic3.h  test-arithmetic4.h  test-matrix.cpp  test-matrix2.h  test-ortho.cpp  test-ortho.h  test-random.cpp  test-vector3.h  test-vector4.h
samples/math/testmath/: CMakeLists.txt  test-algebra-matrix4.h  test-algebra-vector2.h  test-algebra-vector3.h  test-algebra-vector4.h  test-algebra.cpp  test-arithmetic.cpp  test-arithmetic3.h  test-arithmetic4.h  test-matrix3.h  test-matrix4.h  test-memory.cpp  test-memory.h  test-ortho.h  test-random.cpp  test-vector.cpp  test-vector2.h  test-vector4.h
(+30 files in other folders)
