project(samplesgraphics)
add_subdirectory(00-image)
add_subdirectory(01-glfw)
add_subdirectory(02-triangle)
add_subdirectory(03-triangle-instance)
add_subdirectory(04-triangle-instance)
add_subdirectory(05-triangle-instance)
add_subdirectory(06-quad)
add_subdirectory(07-quad-image)
add_subdirectory(08-sphere-image)
add_subdirectory(09-mesh-model)
add_subdirectory(10-panorama)
add_subdirectory(11-framebuffer)
add_subdirectory(12-iobuffer)
file(COPY assets DESTINATION ${PROJECT_BINARY_DIR})
